--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
     background-color: #f8f9fa;
     color: #333;
     font-family: Arial, sans-serif;
-    background-image: url("strawberry.jpeg");
+    background-image: url("strawberry.jpg");
     background-repeat: no-repeat;
     background-size: 100% 100%;
     background-attachment: fixed;
